--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/x-icon" href="./src/assets/favicon-football.png">
-  <title>Footeball Club | Sport </title>
+  <title>Football Club | Sport </title>
 </head>
 
 <body>
